--- a/semana-2/index.html
+++ b/semana-2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erick Bazán</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
@@ -11,7 +12,7 @@
             logo
         </div>
         <div>
-            <ul>
+            <ul class="nav-list">
                 <li>
                     <a href="">Home</a>
                 </li>
@@ -40,7 +41,7 @@
         <div>
             <p>👋 Saludos</p>
             <h1>Erick Bazán</h1>
-            <p>Senior Software Developer</p>
+            <p>Junior Software Developer</p>
             <div>
                 <a href="">Linkedin</a>
                 <a href="">Github</a>
