--- a/semana-2/index.html
+++ b/semana-2/index.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erick Bazán</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <nav>
-        <div>
-            logo
-        </div>
-        <div>
-            <ul class="nav-list">
-                <li>
-                    <a href="">Home</a>
-                </li>
-                <li>
-                    <a href="">Sobre mi</a>
-                </li>
-                <li>
-                    <a href="">Proyectos</a>
-                </li>
-                <li>
-                    <a href="">Habilidades</a>
-                </li>
-                <li>
-                    <a href="">Carrera</a>
-                </li>
-                <li>
-                    <a href="">Recomendaciones</a>
-                </li>
-                <li>
-                    <a href="">Contacto</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <main>
-        <div>
-            <p>👋 Saludos</p>
-            <h1>Erick Bazán</h1>
-            <p>Junior Software Developer</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Erick Bazán</title>
+        <link rel="stylesheet" href="./css/style.css" />
+    </head>
+    <body>
+        <nav>
             <div>
-                <a href="">Linkedin</a>
-                <a href="">Github</a>
-                <a href="">Instagram</a>
+                <img src="./images/logo-1.svg" width="35" height="40" alt="" />
             </div>
-        </div>
-        <div>
-            <img src="" alt="Erick Bazán - Foto de perfil">
-        </div>
-        <div>
-            <p>
-                <a href="">Descargar CV</a>
-            </p>
-            <P>
-                <a href="">Vamos a conversar</a>
-            </P>
-        </div>
-    </main>
-</body>
+            <div>
+                <ul class="nav-list">
+                    <li>
+                        <a href="">Home</a>
+                    </li>
+                    <li>
+                        <a href="">Sobre mi</a>
+                    </li>
+                    <li>
+                        <a href="">Proyectos</a>
+                    </li>
+                    <li>
+                        <a href="">Habilidades</a>
+                    </li>
+                    <li>
+                        <a href="">Carrera</a>
+                    </li>
+                    <li>
+                        <a href="">Recomendaciones</a>
+                    </li>
+                    <li>
+                        <a href="">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <div>
+                <span class="gretting">👋 Saludos</span>
+                <h1 class="title">Erick Bazán</h1>
+                <p class="description">Junior Software Developer</p>
+                <div class="social-links">
+                    <a href="">
+                        <img src="./images/linkedin.svg" alt="Linkedin" />
+                    </a>
+                    <a href="">
+                        <img src="./images/github_2.svg" alt="" />
+                    </a>
+                    <a href="">
+                        <img src="./images/behance.svg" alt="" />
+                    </a>
+                </div>
+            </div>
+            <div class="container-profile">
+                <img
+                    src="./images/profile.jpg"
+                    width="300px"
+                    alt="Erick Bazán - Foto de perfil"
+                />
+            </div>
+            <div class="container-contact">
+                <a href=""
+                    >Descargar CV <img src="./images/download.svg" alt=""
+                /></a>
+                <a href=""><img src="./images/whatsapp.svg" alt="">Vamos a conversar </a>
+            </div>
+        </main>
+    </body>
 </html>
-
