--- a/semana-2/index.html
+++ b/semana-2/index.html
@@ -68,5 +68,27 @@
                 <a href=""><img src="./images/whatsapp.svg" alt="">Vamos a conversar </a>
             </div>
         </main>
+        <section class="container-about-me">
+            <div>
+                <img
+                    src="./images/profile.jpg"
+                    width="300px"
+                    alt="Erick Bazán - Foto de perfil"
+                />
+            </div>
+            <div>
+                <span class="gretting"> 😊 Sobre mí</span>
+                <h2 class="mt-20">Erick Ulises</h2>
+                <h2 class="mb-20">Bazán Avalos</h2>
+                <p class="mb-20">
+                    👋 Me llamo Erick Bazán, pero me pueden llamar Erick
+                </p>
+                <p> 👨‍💻 Hace más de 10 años llevo desarrollando aplicaciones web, mobile y desktop.</p>
+                <p> 🎓 Hace más de 10 años llevo desarrollando aplicaciones web, mobile y desktop.</p>
+                <p> 💡Hace más de 10 años llevo desarrollando aplicaciones web, mobile y desktop.</p>
+                <p class="mt-20"> 🚀Hace más de 10 años llevo desarrollando aplicaciones web, mobile y desktop.</p>
+
+            </div>
+        </section>
     </body>
 </html>
