--- a/semana-3/sunnysiude.html
+++ b/semana-3/sunnysiude.html
@@ -21,7 +21,11 @@
                 </button>                
             </div>
             <div>
-                <ul>
+                <ul class="menu">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Contact</a></li>
 
                 </ul>
             </div>
@@ -31,5 +35,18 @@
         <h1>We are creatives</h1>
         <img class="arrow-down" src="./assets/icon/icon-arrow-down.svg" alt="">
     </main>
+    <section class="section-egg">
+        <div class="bg-egg"></div>
+        <div class="text-center container-egg">
+            <h2>Transform your brand</h2>
+            <p class="font-barlow">
+                We are a full-service create agency specializig in helping brands frow fast.
+            </p>
+            <p class="font-barlow">
+                Engage your clients through compelling visuals that do most of the marketing of you.
+            </p>
+            <a href="" class="link">Learn more</a>
+        </div>
+    </section>
 </body>
 </html>
