feat:card final

--- a/semana-2/index.html
+++ b/semana-2/index.html
@@ -94,18 +94,18 @@
                     <h5>Designer </h5>
                 </div>
             </div>
-            <div>
+            <div class="description-cards">
                 <div>
                     <p>Developer</p>
-                    <p>Front-end</p>
+                    <h5>Front-end</h5>
                 </div>
                 <div>
                     <p>Decenas de proyectos y</p>
-                    <p>experiencias</p>
+                    <h5>Experiencias</h5>
                 </div>
                 <div>
                     <p>Diseñador freelance e</p>
-                    <p>UX / UI</p>
+                    <h5>UX / UI</h5>
                 </div>
                     
                 </div>
